--- a/index.html
+++ b/index.html
@@ -5,37 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"/>
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"/>
     <link 
-    href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"/>
+    href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"/> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Allison&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <section class="coming-soon">
         <div>
-            <h2>Big Heart Reveal</h2>
+            <h2>.Big Heart Reveal.</h2>
             <div class="countdown">
                 <div class="container-day">
                     <h3 class="day">Time</h3>
-                    <h3>Day</h3>
+                    <h3>Days</h3>
                 </div>
                 <div class="container-hour">
                     <h3 class="hour">Time</h3>
-                    <h3>Hour</h3>
+                    <h3>Hours</h3>
                 </div>
                 <div class="container-minute">
                     <h3 class="minute">Time</h3>
-                    <h3>Minute</h3>
+                    <h3>Minutes</h3>
                 </div>
                 <div class="container-second">
                     <h3 class="second">Time</h3>
-                    <h3>Second</h3>
+                    <h3>Seconds</h3>
                 </div>
             </div>
         </div>
-        <!-- <img src="" alt=""> -->
+        <br>
+        <br>
+        <img class="mylove" src="./img/mylove.jpg" alt="two lovers kissing">
     </section>
     <script src="index.js"></script>
     
 </body>
+
+<footer><em>I love you, My Moon & Stars</em></footer>
 </html>
